test/pass/generics/basic_generics.lily
# This tests that variable arguments do not double-solve their inputs.
define f[A, B, C, D, E, F](values: F...) {}
define k[A](v1: A, v2: A) { f(v1, v2) }
k(1, 2)

define check_generics_inherited {
    define a[A] {
        define b(v1: A) {
    
        }
    }
}

define check_generic_sub_assign[A](a: List[A]) {
    a[0] = a[1]
}

define check_empty_list_assign[A](a: List[A]) {
    a = []
}
